--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -385,6 +385,7 @@
   "contract_processing_flow": "LUỒNG XỬ LÝ HỢP ĐỒNG",
   "not_search_file_attach": "Không tìm thấy file đính kèm, vui lòng kiểm tra lại!",
   "typeOfSignEmail":"Đăng nhập bằng email",
+  "email.valid":"Địa chỉ email không hợp lệ",
   "typeOfSignPhone":"Đăng nhập bằng số điện thoại",
   "success_sign":"Ký hợp đồng thành công",
   "success_watch":"Xem xét hợp đồng thành công",
