--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -528,5 +528,9 @@
   "error.contract.name.valid": "Contract name must not contain special characters",
   "error.contract.template.name.valid": "Contract template name must not contain special characters",
   "error.password.valid":"Password must have at least 1 uppercase, lowercase, special characters and the length of 8 characters or more",
-  "email.valid":"Email address is not valid"
+  "email.valid":"Email address is not valid",
+  "report":"Report",
+  "report.detail.contract":"Contract detail",
+  "report.expires-soon.contract":"The contract is about to expire",
+  "report.processing.status.contract":"Contract processing status"
 }
