fix không lưu nhận sms thông báo khi xử lý hợp đồng

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -532,5 +532,8 @@
   "report":"Report",
   "report.detail.contract":"Contract detail",
   "report.expires-soon.contract":"The contract is about to expire",
-  "report.processing.status.contract":"Contract processing status"
+  "report.processing.status.contract":"Contract processing status",
+  "report.number.contracts.status":"Report number of contracts by status",
+  "report.number.contracts.contract-type":"Report number of contracts by contract type",
+  "report.number.contracts.type.sign":"Report the number of contracts in the type of sign"
 }
