--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -536,5 +536,11 @@
   "report.processing.status.contract":"Contract processing status",
   "report.number.contracts.status":"Report number of contracts by status",
   "report.number.contracts.contract-type":"Report number of contracts by contract type",
-  "report.number.contracts.type.sign":"Report the number of contracts in the type of sign"
+  "report.number.contracts.type.sign":"Report the number of contracts in the type of sign",
+  "report.detail.contract.full":"Contract details report",
+  "report.expires-soon.contract.full":"Report the contract is about to expire",
+  "report.processing.status.contract.full":"Contract processing status report",
+  "report.number.contracts.status.full":"Report number of contracts by status",
+  "report.number.contracts.contract-type.full":"Report number of contracts by contract type",
+  "report.number.contracts.type.sign.full":"Report the number of contracts in the type of sign"
 }
