--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -539,6 +539,11 @@
   "report.processing.status.contract":"Trạng thái xử lý",
   "report.number.contracts.status":"SL theo trạng thái",
   "report.number.contracts.contract-type":"SL theo loại HĐ",
-  "report.number.contracts.type.sign":"SL theo hình thức ký"
-
+  "report.number.contracts.type.sign":"SL theo hình thức ký",
+  "report.detail.contract.full":"Báo cáo chi tiết hợp đồng",
+  "report.expires-soon.contract.full":"Báo cáo hợp đồng sắp hết hạn",
+  "report.processing.status.contract.full":"Báo cáo trạng thái xử lý hợp đồng",
+  "report.number.contracts.status.full":"Báo cáo số lượng hợp đồng theo trạng thái",
+  "report.number.contracts.contract-type.full":"Báo cáo số lượng hợp đồng theo loại hợp đồng",
+  "report.number.contracts.type.sign.full":"Báo cáo số lượng hợp đồng theo hình thức ký"
 }
