fix sms doi tac ca nhan

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -141,7 +141,7 @@
   "user.doc": "Văn thư",
   "user.lead": "Người điều phối",
   "user.name": "Họ tên",
-  "sms.locale": "Ngôn ngữ sms",
+  "sms.locale": "Ngôn ngữ SMS",
   "user.email": "Email",
   "user.sign-type": "Loại ký",
   "user.otp": "OTP",
