--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -542,5 +542,7 @@
   "report.processing.status.contract.full":"Contract processing status report",
   "report.number.contracts.status.full":"Report number of contracts by status",
   "report.number.contracts.contract-type.full":"Report number of contracts by contract type",
-  "report.number.contracts.type.sign.full":"Report the number of contracts in the type of sign"
+  "report.number.contracts.type.sign.full":"Report the number of contracts in the type of sign",
+  "include.org1":"Including sub-organizations (Sub-organizations include only tier-one sub-organizations)",
+  "contract.time.create": "Time create"
 }
