--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -556,5 +556,6 @@
   "user.not.process":"User not process",
   "contract.status.canceled":"Cancel",
   "prepare_expires":"Prepare expire",
-  "total":"Total"
+  "total":"Total",
+  "valid.login.user":"Participants in the partner's contract processing flow must not overlap"
 }
