fix ký usb token v2 không nhập mật khẩu

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -557,5 +557,6 @@
   "contract.status.canceled":"Cancel",
   "prepare_expires":"Prepare expire",
   "total":"Total",
-  "valid.login.user":"Participants in the partner's contract processing flow must not overlap"
+  "valid.login.user":"Participants in the partner's contract processing flow must not overlap",
+  "captcha.wrong":"Wrong captcha"
 }
