--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -560,5 +560,6 @@
   "contract.status.canceled":"Huỷ bỏ",
   "prepare_expires":"Sắp quá hạn",
   "total":"Tổng số",
-  "valid.login.user":"Người tham gia trong luồng xử lý hợp đồng của đối tác không được trùng nhau"
+  "valid.login.user":"Người tham gia trong luồng xử lý hợp đồng của đối tác không được trùng nhau",
+  "captcha.wrong":"Nhập sai captcha"
 }
