kiem tra lissence gan timestamp, gui BCT

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -453,6 +453,10 @@
   "ekyc.purchased": "Number of eKYC purchased:",
   "sms.purchased": "Number of SMS purchased:",
   "sms.used": "Number of SMS used",
+  "timestamp.used": "Number of timestamp used",
+  "timestamp.purchased":"Number of timestamp purchased",
+  "ceca.used":"Number of Ceca used",
+  "ceca.purchased": "Number of Ceca purchased",
   "information.signatures": "INFORMATION OF THE SIGNATURES",
   "contract.number.lot": "CONTRACT NUMBER BY LOT",
   "ok.sign": "Ok and sign",
