--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -459,6 +459,10 @@
   "ekyc.purchased":"Số lượng eKYC đã mua:",
   "sms.purchased":"Số lượng SMS đã mua",
   "sms.used":"Số lượng SMS đã sử dụng",
+  "timestamp.used": "Số lượng timestamp đã sử dụng",
+  "timestamp.purchased":"Số lượng timestamp đã mua",
+  "ceca.used":"Số lần xác nhận BCT đã dùng",
+  "ceca.purchased": "Số lần xác nhận BCT đã mua",
   "information.signatures":"THÔNG TIN CÁC BÊN KÝ",
   "contract.number.lot":"SỐ HỢP ĐỒNG THEO LÔ",
   "ok.sign":"Đồng ý và ký",
