--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -257,6 +257,7 @@
   "error.name.required":"Họ và tên không được để trống",
   "error.phone.required":"Số điện thoại không được để trống",
   "error.cardid.required":"MST/CMT/CCCD phải nhập 9 hoặc 12 ký tự",
+  "error.card.required":"MST/CMT/CCCD không được để trống",
   "error.email.required":"Email không được để trống",
   "error.ceca.required":"Đẩy file hợp đồng lên Bộ Công thương không được để trống",
   "error.contract.file.required": "File hợp đồng không được để trống",
@@ -457,12 +458,12 @@
   "ekyc.used":"Số lượng eKYC đã sử dụng:",
   "contract.purchased":"Số lượng hợp đồng đã mua:",
   "ekyc.purchased":"Số lượng eKYC đã mua:",
-  "sms.purchased":"Số lượng SMS đã mua",
-  "sms.used":"Số lượng SMS đã sử dụng",
-  "timestamp.used": "Số lượng timestamp đã sử dụng",
-  "timestamp.purchased":"Số lượng timestamp đã mua",
-  "ceca.used":"Số lần xác nhận BCT đã dùng",
-  "ceca.purchased": "Số lần xác nhận BCT đã mua",
+  "sms.purchased":"Số lượng SMS đã mua:",
+  "sms.used":"Số lượng SMS đã sử dụng:",
+  "timestamp.used": "Số lượng timestamp đã sử dụng:",
+  "timestamp.purchased":"Số lượng timestamp đã mua:",
+  "ceca.used":"Số lần xác nhận BCT đã dùng:",
+  "ceca.purchased": "Số lần xác nhận BCT đã mua:",
   "information.signatures":"THÔNG TIN CÁC BÊN KÝ",
   "contract.number.lot":"SỐ HỢP ĐỒNG THEO LÔ",
   "ok.sign":"Đồng ý và ký",
@@ -555,5 +556,6 @@
   "email.already.exist": "Email đã có trong luồng xử lý",
   "phone.already.exist": "Số điện thoại đã có trong luồng xử lý",
   "cardid.already.exist": "MST/CMT/CCCD đã có trong luồng xử lý",
-  "update.success": "Cập nhật người xử lý thành công"
+  "update.success": "Cập nhật người xử lý thành công",
+  "error.update.handler": "Có lỗi cập nhật người xử lý"
 }
