--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -567,6 +567,6 @@
   "total":"Tổng số",
   "valid.login.user":"Người tham gia trong luồng xử lý hợp đồng của đối tác không được trùng nhau",
   "captcha.wrong":"Nhập sai captcha",
-  "weak.pass":"Mật khẩu của bạn chưa đủ mạnh. Hãy đổi mật khẩu để bảo vệ tài khoản",
+  "weak.pass":"Mật khẩu đang sử dụng không an toàn. Vui lòng đổi mật khẩu để bảo vệ tài khoản của bạn!",
   "error.update.handler": "Có lỗi cập nhật người xử lý"
 }
