--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -568,5 +568,7 @@
   "valid.login.user":"Người tham gia trong luồng xử lý hợp đồng của đối tác không được trùng nhau",
   "captcha.wrong":"Nhập sai captcha",
   "weak.pass":"Mật khẩu đang sử dụng không an toàn. Vui lòng đổi mật khẩu để bảo vệ tài khoản của bạn!",
-  "error.update.handler": "Có lỗi cập nhật người xử lý"
+  "error.update.handler": "Có lỗi cập nhật người xử lý",
+  "created.unit":"Đơn vị tạo HĐ",
+  "created.user":"Người tạo"
 }
