--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -572,5 +572,7 @@
   "created.unit":"Đơn vị tạo HĐ",
   "created.user":"Người tạo",
   "attach.file.valid":"File hợp đồng yêu cầu định dạng pdf, doc, docx, png, jpg, jpeg, zip, rar, txt",
-  "update.success":"Cập nhật thành công"
+  "update.success":"Cập nhật thành công",
+  "error.contract.template.name.valid":"Tên mẫu hợp đồng không được chứa ký tự đặc biệt",
+  "enter.captcha":"Nhập captcha"
 }
