--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -570,5 +570,6 @@
   "created.user":"Created user",
   "attach.file.valid":"Contract file requires pdf, doc, docx, png, jpg, jpeg, zip, rar, txt format",
   "update.success":"Update success",
-  "enter.captcha":"Enter captcha"
+  "enter.captcha":"Enter captcha",
+  "date.full.valid":"Please enter the full creation date"
 }
