--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -574,5 +574,6 @@
   "attach.file.valid":"File hợp đồng yêu cầu định dạng pdf, doc, docx, png, jpg, jpeg, zip, rar, txt",
   "update.success":"Cập nhật thành công",
   "error.contract.template.name.valid":"Tên mẫu hợp đồng không được chứa ký tự đặc biệt",
-  "enter.captcha":"Nhập captcha"
+  "enter.captcha":"Nhập captcha",
+  "date.full.valid":"Vui lòng nhập đủ ngày tạo"
 }
