--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -575,5 +575,6 @@
   "download.multi": "Download multi",
   "contract.down": "Download",
   "add.unit.success":"Add organization success!",
-  "link.valid":"The access link has expired"
+  "link.valid":"The access link has expired",
+  "change.pass.first":"First time login, please change password"
 }
