--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -576,5 +576,7 @@
   "contract.down": "Download",
   "add.unit.success":"Add organization success!",
   "link.valid":"The access link has expired",
-  "change.pass.first":"First time login, please change password"
+  "change.pass.first":"First time login, please change password",
+  "captcha.fail":"Wrong captcha",
+  "captcha.not.blank":"You have not entered the captcha"
 }
