--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -592,5 +592,6 @@
   "invalid.inform":"Thông tin không hợp lệ",
   "card.id.fail":"Nhận dạng căn cước công dân lỗi",
   "fae.recog":"Nhận dạng khuôn mặt",
-  "push.image.fail":"Đẩy file ảnh không thành công"
+  "push.image.fail":"Đẩy file ảnh không thành công",
+  "sign.file-image.mark":"Ảnh con dấu"
 }
