--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -590,5 +590,6 @@
   "card.id.fail":"Citizen ID identification error",
   "fae.recog":"Face recognition",
   "push.image.fail":"Image file push failed",
-  "sign.file-image.mark":"Mark image"
+  "sign.file-image.mark":"Mark image",
+  "stamp.contract.questions":"Would you like to add a stamp photo to this contract?"
 }
