--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -572,7 +572,7 @@
   "error.update.handler": "Có lỗi cập nhật người xử lý",
   "created.unit":"Đơn vị tạo HĐ",
   "created.user":"Người tạo",
-  "attach.file.valid":"File hợp đồng yêu cầu định dạng pdf, doc, docx, png, jpg, jpeg, zip, rar, txt",
+  "attach.file.valid":"File hợp đồng yêu cầu định dạng pdf, doc, docx, png, jpg, jpeg, zip, rar, txt, xls, xlsx",
   "update.success":"Cập nhật thành công",
   "error.contract.template.name.valid":"Tên mẫu hợp đồng không được chứa ký tự đặc biệt",
   "enter.captcha":"Nhập captcha",
