valid khi không chọn ảnh form chọn ảnh đóng dấu/ký

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -595,5 +595,6 @@
   "email.already.exist": "Email already exist",
   "phone.already.exist": "Phone already exist",
   "cardid.already.exist": "MST/CMT/CCCD already exist",
-  "menu.config-sms-email": "Configure sending SMS/Email"
+  "menu.config-sms-email": "Configure sending SMS/Email",
+  "not.photo":"You haven't selected a photo yet"
 }
