--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -599,5 +599,6 @@
   "email.already.exist": "Email đã có trong luồng xử lý",
   "phone.already.exist": "Số điện thoại đã có trong luồng xử lý",
   "cardid.already.exist": "MST/CMT/CCCD đã có trong luồng xử lý",
-  "menu.config-sms-email": "Cấu hình gửi SMS/Email"
+  "menu.config-sms-email": "Cấu hình gửi SMS/Email",
+  "not.photo":"Bạn chưa chọn ảnh"
 }
