--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -600,5 +600,6 @@
   "phone.already.exist": "Số điện thoại đã có trong luồng xử lý",
   "cardid.already.exist": "MST/CMT/CCCD đã có trong luồng xử lý",
   "menu.config-sms-email": "Cấu hình gửi SMS/Email",
-  "not.photo":"Bạn chưa chọn ảnh"
+  "not.photo":"Bạn chưa chọn ảnh",
+  "mark.contract":"Đóng dấu hợp đồng"
 }
