--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -596,5 +596,6 @@
   "phone.already.exist": "Phone already exist",
   "cardid.already.exist": "MST/CMT/CCCD already exist",
   "menu.config-sms-email": "Configure sending SMS/Email",
-  "not.photo":"You haven't selected a photo yet"
+  "not.photo":"You haven't selected a photo yet",
+  "mark.contract":"Seal the contract"
 }
