--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -574,7 +574,7 @@
   "enter.captcha":"Enter captcha",
   "date.full.valid":"Please enter the full creation date",
   "download.multi": "Download multi",
-  "contract.down": "Download",
+  "contract.down": "Download contract",
   "add.unit.success":"Add organization success!",
   "link.valid":"The access link has expired",
   "change.pass.first":"First time login, please change password",
