giao diện chữ ký có con dấu và fixbug quay lại đối với hợp đồng tạo

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -601,7 +601,7 @@
   "cardid.already.exist": "MST/CMT/CCCD đã có trong luồng xử lý",
   "menu.config-sms-email": "Cấu hình gửi SMS/Email",
   "not.photo":"Bạn chưa chọn ảnh",
-  "mark.contract":"Đóng dấu hợp đồng hợp đồng",
+  "mark.contract":"Đóng dấu hợp đồng",
   "customer.list":"Danh mục khách hàng",
   "organization.customer":"Khách hàng tổ chức",
   "personal.customer":"Khách hàng cá nhân",
