--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -608,5 +608,6 @@
   "organization.customer.name":"Tên tổ chức",
   "personal.customer.name":"Tên cá nhân",
   "tax.code":"Mã số thuế",
-  "phone_mail":"SĐT/Email"
+  "phone_mail":"SĐT/Email",
+  "contract.views": "Xem xét nhiều"
 }
