--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -592,5 +592,17 @@
   "push.image.fail":"Image file push failed",
   "sign.file-image.mark":"Mark image",
   "stamp.contract.questions":"Would you like to add a stamp photo to this contract?",
-  "customer.list":"Customer list"
+  "customer.list":"Partner list",
+  "organization.customer":"Organization partner",
+  "personal.customer":"Personal partner",
+  "organization.customer.name":"Organization name",
+  "personal.customer.name":"Personal name",
+  "tax.code":"Tax code",
+  "phone_mail":"Phone number/Email",
+  "customer.search.name.placeholder":"Enter keywords to search by name",
+  "organization.customer.add":"Add partner",
+  "personal.customer.add":"Add partner",
+  "organization.customer.detail":"Organization partner detail",
+  "personal.customer.detail":"Personal partner detail",
+  "confirm.customer.delete": "Are you sure you want to delete this partner?"
 }
