--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -604,5 +604,8 @@
   "personal.customer.add":"Add partner",
   "organization.customer.detail":"Organization partner detail",
   "personal.customer.detail":"Personal partner detail",
-  "confirm.customer.delete": "Are you sure you want to delete this partner?"
+  "confirm.customer.delete": "Are you sure you want to delete this partner?",
+  "attribute.text.type": "Text type",
+  "choose.text.type": "Choose text type",
+  "tree.folder": "Tree folder"
 }
